--- a/ES6/笔记.Md
+++ b/ES6/笔记.Md
@@ -3641,3 +3641,177 @@ Foo()
 // TypeError: Class constructor Foo cannot be invoked without 'new'
 ```
 
+
+
+### 18.4 类的实例对象
+
+生成类的实例对象的写法,与ES5完全一样,也是使用`new`命令.如果忘记加上`new`,像函数那样调用`Class`,将会报错
+
+```js
+class Point {
+  // ...
+}
+
+// 报错
+var point = Point(2, 3);
+
+// 正确
+var point = new Point(2, 3);
+```
+
+与ES5一样,实例的属性除非显式定义在其本身(即定义在`this`对象上),否则都是定义在原型上(即定义在`class`上).
+
+```js
+class Point {
+  constructor(x, y) {
+    this.x = x;
+    this.y = y;
+  }
+  toString() {
+    return '(' + this.x + ',' + this.y + ')';
+  }
+}
+
+var point = new Point(2, 3);
+
+point.toString(); //(2,3)
+
+point.hasOwnProperty('x'); //true;
+point.hasOwnProperty('y'); //true;
+point.hasOwnProperty('toString'); //false;
+point.__proto__.hasOwnProperty('toString'); //true
+```
+
+上面代码中，`x`和`y`都是实例对象`point`自身的属性（因为定义在`this`变量上），所以`hasOwnProperty`方法返回`true`，而`toString`是原型对象的属性（因为定义在`Point`类上），所以`hasOwnProperty`方法返回`false`。这些都与 ES5 的行为保持一致。
+
+```js
+var p1 = new Point(2,3);
+var p2 = new Point(3,2);
+
+p1.__proto__ === p2.__proto__
+//true
+```
+
+上面代码中，`p1`和`p2`都是`Point`的实例，它们的原型都是`Point.prototype`，所以`__proto__`属性是相等的。
+
+这也意味着，可以通过实例的`__proto__`属性为“类”添加方法。
+
+> `__proto__` 并不是语言本身的特性，这是各大厂商具体实现时添加的私有属性，虽然目前很多现代浏览器的 JS 引擎中都提供了这个私有属性，但依旧不建议在生产中使用该属性，避免对环境产生依赖。生产环境中，我们可以使用 `Object.getPrototypeOf` 方法来获取实例对象的原型，然后再来为原型添加方法/属性.
+
+```js
+var p1 = new Point(2,3);
+var p2 = new Point(3,2);
+
+p1.__proto__.printName = function () { return 'Oops' };
+
+p1.printName() // "Oops"
+p2.printName() // "Oops"
+
+var p3 = new Point(4,2);
+p3.printName() // "Oops"
+```
+
+上面代码在`p1`的原型上添加了一个`printName`方法，由于`p1`的原型就是`p2`的原型，因此`p2`也可以调用这个方法。而且，此后新建的实例`p3`也可以调用这个方法。这意味着，使用实例的`__proto__`属性改写原型，必须相当谨慎，不推荐使用，因为这会改变“类”的原始定义，影响到所有实例。
+
+
+
+ps: 这章就是ES5原型链的知识..
+
+
+
+
+
+### 18.5 Class表达式
+
+与函数一样,类也可以使用表达式的形式定义.
+
+```js
+const MyClass = class Me {
+  getClssName() {
+    return Me.name;
+  }
+};
+```
+
+上面代码使用表达式定义了一个类,需要注意的是,这个类的名字是`MyClass`而不是`Me`,`Me`只在Class的内部代码可用,指代当前类
+
+```js
+let inst = new MyClass();
+inst.getClassName(); //Me
+Me.name; //ReferenceError: Me is not defined
+```
+
+上面代码表示,`Me`只在Class内部有定义(`Me`其实就是代替的`this`?)
+
+如果类的内部没用到的话，可以省略`Me`，也就是可以写成下面的形式。
+
+```js
+const MyClass = class { /* ... */ };
+```
+
+采用 Class 表达式，可以写出**立即执行的 Class**。
+
+```js
+let person = new class {
+  constructor(name) {
+    this.name = name;
+  }
+
+  sayName() {
+    console.log(this.name);
+  }
+}('张三');
+
+person.sayName(); // "张三"
+```
+
+上面代码中，`person`是一个立即执行的类的实例。(就是匿名类会立即执行?)
+
+
+
+### 18.6 不存在变量提升
+
+类不存在变量提升(hoist),这一点与ES5完全不同.
+
+```js
+new Foo(); // ReferenceError
+class Foo {}
+```
+
+上面代码中,`Foo`类使用在前,定义在后,这样会报错,因为ES6不会把类的声明提升到代码头部,这种规范与继承有关,必须要整子类在父类之后定义.
+
+```js
+{
+  let Foo = class {};
+  class Bar extends Foo {}
+}
+```
+
+上面的代码不会报错,因为`Bar`继承`Foo`的时候,`Foo`已经有定义了,但是,如果存在`class`的提升,上面代码就会报错,因为`class`会被提升到代码头部,而`let`命令是不断提升的,所以导致`Bar`继承`Foo`的时候,`Foo`还没有定义
+
+
+
+### 18.7 私有方法
+
+私有方法是常见的需求,但Es6不提供,只能通过变通方法实现模拟
+
+一种做法实在命名上加以区别.
+
+```js
+class Widget {
+  //公有方法
+  foo(baz) {
+    this._bar(baz);
+  }
+
+  //私有方法
+  _bar(baz) {
+    return (this.snaf = baz);
+  }
+
+  //...
+}
+```
+
+上面代码中,`_bar`方法前面的下划线,表示这是一个只限于内部使用的私有方法.但是,这种命名是不保险的,在类的外部,还是可以调用到这个方法。
+
