--- a/ES6/18.Class的基本语法.md
+++ b/ES6/18.Class的基本语法.md
@@ -429,7 +429,7 @@ export default class myClass {
 
 
 
-### 18.8
+### 18.8 私有属性
 
 与私有方法一样，ES6 不支持私有属性。目前，有一个[提案](https://github.com/tc39/proposal-class-fields#private-fields)，为`class`加了私有属性。方法是在属性名之前，使用`#`表示。
 
@@ -458,3 +458,506 @@ class Point {
 }
 ```
 
+之所以要引入一个新的前缀`#`表示私有属性，而没有采用`private`关键字，是因为 JavaScript 是一门动态语言，使用独立的符号似乎是唯一的可靠方法，能够准确地区分一种属性是否为私有属性。另外，Ruby 语言使用`@`表示私有属性，ES6 没有用这个符号而使用`#`，是因为`@`已经被留给了 Decorator。
+
+该提案只规定了私有属性的写法。但是，它也可以用来写私有方法。
+
+```js
+class Foo {
+  #a;
+  #b;
+  #sum() { return #a + #b; }
+  printSum() { console.log(#sum()); }
+  constructor(a, b) { #a = a; #b = b; }
+}
+```
+
+
+
+### 18.9 this的指向
+
+类的方法内部如果含有`this`,它默认指向类的实例,但是,需要注意的是,一旦单独使用该方法,很可能会报错
+
+```js
+class Logger {
+  printName(name = 'there') {
+    this.print(`Hello ${name}`);
+  }
+
+  print(text) {
+    console.log(text);
+  }
+}
+
+const logger = new Logger();
+const { printName } = logger;
+printName(); // TypeError: Cannot read property 'print' of undefined
+```
+
+上面代码中,`printName`方法中的`this`,默认指向的是`Logger`类的实例.但是,如果将这个方法提取出来单独使用,`this` 会指向该方法运行时所在的环境
+
+> 这时应该指向的是哪里呢?不是
+
+```js
+class Logger {
+  printName(name = 'there') {
+    console.log(this);//
+    this.printName(`hello ${name}`);
+  }
+  print(name) {
+    console.log(name);
+  }
+}
+const logger = new Logger();
+const { printName } = logger;
+printName();
+//undefined  判断过(this===window) //false
+// TypeError: Cannot read property 'print' of undefined
+```
+
+上面代码中,`printName`方法中的`this`默认指向`Logger`类的实例,但是,如果将这个方法提取出来单独使用,`this`会指向该方法运行时所在的环境,因为找不到`print`方法而导致报错.
+
+一个比较简单的解决方法是,在构造方法中绑定`this`,这样就不会`this`指向错误,找不到`print`方法了.
+
+```js
+class Logger {
+  constructor() {
+    this.printName = this.printName.bind(this);
+  }
+  printName(name = 'there') {
+    console.log(this);//Logger
+    this.print(`hello ${name}`);
+  }
+  print(name) {
+    console.log(name);
+  }
+}
+const logger = new Logger();
+const { printName } = logger;
+printName(); 
+```
+
+另一种方法是使用箭头函数
+
+```js
+class Logger {
+  constructor() {
+    this.printName = (name = 'there') => {
+      this.print(`Hello ${name}`);
+    };
+  }
+
+  print(name) {
+    console.log(name);
+  }
+}
+const logger = new Logger();
+const { printName } = logger;
+printName();
+```
+
+还有一种解决方法是使用`Proxy`，获取方法的时候，自动绑定`this`。
+
+
+
+### 18.10 name 属性
+
+由于本质上，ES6 的类只是 ES5 的构造函数的一层包装，所以函数的许多特性都被`Class`继承，包括`name`属性。
+
+```js
+class Point()
+Point.name // "Point"
+```
+
+> 为啥这里还要知道Point.name呢..
+
+`name`属性总是返回紧跟在`class`关键字后面的类名。
+
+
+
+### 18.11 Class的取值函数(getter)和存值函数(setter)
+
+与 ES5 一样，在“类”的内部可以使用`get`和`set`关键字，对某个属性设置存值函数和取值函数，拦截该属性的存取行为。
+
+```js
+class MyClass {
+  constructor() {
+    // ...
+  }
+  get prop() {
+    return 'getter';
+  }
+  set prop(value) {
+    console.log('setter: '+value);
+  }
+}
+
+let inst = new MyClass();
+
+inst.prop = 123;
+// setter: 123
+
+inst.prop
+// 'getter'
+```
+
+上面代码中，`prop`属性有对应的存值函数和取值函数，因此赋值和读取行为都被自定义了。
+
+存值函数和取值函数是设置在属性的 Descriptor 对象上的。
+
+```js
+class CustomHTMLElement {
+  constructor(element) {
+    this.element = element;
+  }
+
+  get html() {
+    return this.element.innerHTML;
+  }
+
+  set html(value) {
+    this.element.innerHTML = value;
+  }
+}
+
+var descriptor = Object.getOwnPropertyDescriptor(
+  CustomHTMLElement.prototype, "html"
+);
+
+"get" in descriptor  // true
+"set" in descriptor  // true
+```
+
+```shell
+Object.getOwnPropertyDescriptor(obj, prop) 
+
+参数
+obj
+
+需要查找的目标对象
+prop
+
+目标对象内属性名称（String类型）
+返回值
+
+如果指定的属性存在于对象上，则返回其属性描述符对象（property descriptor），否则返回 undefined。
+```
+
+上面代码中，存值函数和取值函数是定义在`html`属性的描述对象上面，这与 ES5 完全一致。
+
+
+
+### 18.12 Class的Generator方法
+
+如果某个方法之前加上个星号(`*`),就表示这个方法是一个Generator函数
+
+```js
+class Foo {
+  constructor(...args) {
+    this.args = args;
+  }
+  *[Symbol.iterator]() {
+    for (let arg of this.args) {
+      yield arg;
+    }
+  }
+}
+for (let x of new Foo('Hello', 'World')) {
+  console.log(x);
+}
+// Hello
+// World
+```
+
+上面代码中,`Foo`类的`Symbol.iterator`方法前有一个星号,表示该方法是一个Generator函数.`Symbol.iterator`方法返回一个`Foo`类的遍历器,所以`for...of`循环会自动调用这个遍历器.
+
+
+
+### 18.13 Class的静态方法
+
+类相当于实例的原型,所有在类中定义的方法,都会被实例继承.如果在一个方法前,加上`static`关键字,就表示该方法不会被实例继承,而是直接通过类来调用,这就是称为"静态方法".
+
+即只能被**类**调用,而**实例上不可以**被调用
+
+```js
+class Foo {
+  static classMethod() {
+    console.log('hello');
+  }
+}
+Foo.classMethod(); // 'hello'
+let foo = new Foo();
+foo.classMethod();// TypeError: foo.classMethod is not a function
+```
+
+上面代码中,`Foo`类的`classMethod`方法前面有`static`关键字,表明该方法是一个静态方法,可以直接在`Foo`类上调用`Foo.classMethod()`,而不是在`Foo`类的实例上调用,如果在实例上调用静态方法,会抛出一个错误,表示不存在该方法
+
+注意,如果静态方法包含`this`关键字,这个`this`指的是**类**,而**不是实例**.
+
+```js
+class Foo {
+  static bar() {
+    this.baz()
+  }
+  static baz(){
+    console.log('hello');
+  }
+  baz(){
+    console.log('wrold');
+  }
+}
+Foo.bar();// hello
+
+var foo = new Foo()
+foo.baz(); // wrold
+```
+
+上面代码中，静态方法`bar`调用了`this.baz`，这里的`this`指的是`Foo`类，而不是`Foo`的实例，等同于调用`Foo.baz`。另外，从这个例子还可以看出，静态方法可以与非静态方法重名。
+
+父类的静态方法，可以被子类继承。
+
+```js
+class Foo {
+  static bar() {
+    console.log(this);
+    this.baz()
+  }
+  static baz(){
+    console.log('hello');
+  }
+  baz(){
+    console.log('wrold');
+  }
+}
+class Bar extends Foo {
+}
+
+Bar.bar();//hello
+```
+
+上面代码中，父类`Foo`有一个静态方法，子类`Bar`可以调用这个方法。
+
+静态方法也是可以从`super`对象上调用的。
+
+```js
+class Foo {
+  static bar() {
+    return this.baz();
+  }
+  static baz() {
+    return 'hello';
+  }
+  baz() {
+    console.log('wrold');
+  }
+}
+class Bar extends Foo {
+  static bar() {
+    console.log(super.bar() + ' world!');
+  }
+}
+
+Bar.bar(); //hello world;
+```
+
+
+
+### 18.14 Class的静态属性和实例属性:
+
+> PS: 
+>
+> 静态:不需要实例化,直接用类名调用
+>
+> 私有:只在这个类里面调用,外部与第三方无法调用
+
+静态属性指的是 Class 本身的属性，即`Class.propName`，而不是定义在实例对象（`this`）上的属性。
+
+```js
+class Foo{
+}
+Foo.prop=1;
+Foo.prop //1
+```
+
+目前有一个静态属性的[提案](https://github.com/tc39/proposal-class-fields)，对实例属性和静态属性都规定了新的写法。
+
+（1）类的实例属性
+
+类的实例属性可以用等式,写入类的定义之中.
+
+```js
+class MyClass {
+  myProp = 42;
+
+  constructor() {
+    console.log(this.myProp); // 42
+  }
+}
+```
+
+上面代码中，`myProp`就是`MyClass`的实例属性。在`MyClass`的实例上，可以读取这个属性。
+
+以前，我们定义实例属性，只能写在类的`constructor`方法里面。
+
+```js
+class ReactCounter extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      count: 0
+    };
+  }
+}
+```
+
+上面代码中，构造方法`constructor`里面，定义了`this.state`属性。
+
+有了新的写法以后，可以不在`constructor`方法里面定义。
+
+```js
+class ReactCounter extends React.Component {
+  state = {
+    count: 0
+  };
+}
+```
+
+这种写法比以前更清晰。
+
+为了可读性的目的，对于那些在`constructor`里面已经定义的实例属性，新写法允许直接列出。
+
+```js
+class ReactCounter extends React.Component {
+  state;
+  constructor(props) {
+    super(props);
+    this.state = {
+      count: 0
+    };
+  }
+}
+```
+
+（2）类的静态属性
+
+类的静态属性只要在上面的实例属性写法前面，加上`static`关键字就可以了。
+
+```js
+class MyClass {
+  static myStaticProp = 42;
+
+  constructor() {
+    console.log(MyClass.myStaticProp); // 42
+  }
+}
+```
+
+同样的，这个新写法大大方便了静态属性的表达。
+
+```js
+// 老写法
+class Foo {
+  // ...
+}
+Foo.prop = 1;
+
+// 新写法
+class Foo {
+  static prop = 1;
+}
+```
+
+上面代码中，老写法的静态属性定义在类的外部。整个类生成以后，再生成静态属性。这样让人很容易忽略这个静态属性，也不符合相关代码应该放在一起的代码组织原则。另外，新写法是显式声明（declarative），而不是赋值处理，语义更好。
+
+
+
+### 18.15 new.target属性
+
+`new`是从构造函数生成实例对象的命令,ES6为`new`命令引入了一个`new.target`属性,该属性一般用在构造函数之中,返回`new`命令作用于的那个构造函数,如果构造函数不是通过`new`命令调用的,`new.target`会返回`undefined`,因此这个属性可以用来确定构造函数是怎么调用的.
+
+> 第一个案例中使用function构造函数,是因为class 类只能用new实例化
+
+```js
+function Person(name) {
+  if (new.target !== undefined) {
+    this.name = name;
+  } else {
+    throw new Error('必须使用 new 命令生成实例');
+  }
+}
+
+// 另一种写法
+function Person(name) {
+  if (new.target === Person) {
+    this.name = name;
+  } else {
+    throw new Error('必须使用 new 命令生成实例');
+  }
+}
+
+var person = new Person('张三'); // 正确
+var notAPerson = Person.call(person, '张三');  // 报错
+```
+
+上面代码确保构造函数只能通过`new`命令调用。
+
+Class 内部调用`new.target`，返回当前 Class。
+
+```js
+class Rectangle {
+  constructor(length, width) {
+    console.log(new.target === Rectangle);
+    this.length = length;
+    this.width = width;
+  }
+}
+
+var obj = new Rectangle(3, 4); // 输出 true
+```
+
+需要注意的是，子类继承父类时，`new.target`会返回子类。
+
+```js
+class Rectangle {
+  constructor(length, width) {
+    console.log(new.target === Rectangle);
+    // ...
+  }
+}
+
+class Square extends Rectangle {
+  constructor(length) {
+    super(length, length);
+  }
+}
+
+var obj = new Square(3); // 输出 false
+```
+
+上面的代码中,`new.target`会返回子类
+
+利用这个特点，可以写出不能独立使用、必须继承后才能使用的类。
+
+```js
+class Shape {
+  constructor() {
+    if (new.target === Shape) {
+      throw new Error('本类不能实例化');
+    }
+  }
+}
+
+class Rectangle extends Shape {
+  constructor(length, width) {
+    super();
+    // ...
+  }
+}
+
+var x = new Shape();  // 报错
+var y = new Rectangle(3, 4);  // 正确
+```
+
+上面代码中，`Shape`类不能被实例化，只能用于继承。
+
+注意，在函数外部，使用`new.target`会报错。
