--- a/ES6/20.Decorator.md
+++ b/ES6/20.Decorator.md
@@ -485,3 +485,351 @@ const wrapped = loggingDecorator(doSomething);
    ```
 
    ​
+
+
+### 20.5 使用修饰器实现自动发布事件
+
+我们可以使用修饰器,使得对象的方法被调用时,自动发出一个事件
+
+```js
+const postal = require('postal/lib/postal.lodash');
+
+export default function publish(toppic,channel) {
+  const channelName = channel || '/' ;
+  const msgChannel = postal.channel(channelName);
+  msgChannel.subscribe(topic,v=>{
+    console.log('频道: ', channelName);
+    console.log('事件: ', topic);
+    console.log('数据: ', v);
+  });
+  
+  return function(target,name,descriptor) {
+    const fn = descriptor.value;
+    
+    descriptor.value = function () {
+      let value = fn.apply(this,arguments);
+      msgChannel.publish(topic,value);
+    }
+  }
+}
+```
+
+上面代码定义了一个名为`publish`的修饰器，它通过改写`descriptor.value`，使得原方法被调用时，会自动发出一个事件。它使用的事件“发布/订阅”库是[Postal.js](https://github.com/postaljs/postal.js)。
+
+它的用法如下。
+
+```js
+// index.js
+import publish from './publish';
+
+class FooComponent {
+  @publish('foo.some.message', 'component')
+  someMethod() {
+    return { my: 'data' };
+  }
+  @publish('foo.some.other')
+  anotherMethod() {
+    // ...
+  }
+}
+
+let foo = new FooComponent();
+
+foo.someMethod();
+foo.anotherMethod();
+```
+
+以后,只要调用`someMethod`或者`anotherMethond`,就会自动发出一个事件.
+
+```bash
+$ bash-node index.js
+频道:  component
+事件:  foo.some.message
+数据:  { my: 'data' }
+
+频道:  /
+事件:  foo.some.other
+数据:  undefined
+```
+
+
+
+
+
+### 20.6 Mixin
+
+在修饰器的基础上,可以实现`Mixin`模式,所谓`Mixin`模式,就是对象继承的一种替代方案,中文译为"混入"(mix in),意为在一个对象之中混入另外一个对象的方法
+
+请看下面的例子
+
+```js
+const Foo = {
+  foo() {console.log('foo')}
+};
+
+class MyClass {}
+
+Object.assign(MyClass.prototype,Foo);
+
+let obj = new MyClass();
+obj.foo() //'foo'
+```
+
+上面代码之中,对象`Foo`有一个`foo`方法,通过`Object.assign`方法,可以将`foo`方法`混入`MyClass类,导致`MyClass`的实例`obj`都具有`foo`方法,这就是`混入`模式的一个简单实现.
+
+下面,部署一个通用脚本`mixins.js`,将Mixin写成一个修饰器.
+
+```js
+export function mixins(...list) {
+  return function (target) {
+    Object.assign(target.prototype, ...list);
+  };
+}
+```
+
+然后，就可以使用上面这个修饰器，为类“混入”各种方法。
+
+```js
+import { mixins } from './mixins';
+
+const Foo = {
+  foo() { console.log('foo') }
+};
+
+@mixins(Foo)
+class MyClass {}
+
+let obj = new MyClass();
+obj.foo() // "foo"
+```
+
+通过`mixins`这个修饰器,实现了在`MyClass`类上的"混入"`Foo`对象的`foo`方法.
+
+不过，上面的方法会改写`MyClass`类的`prototype`对象，如果不喜欢这一点，也可以通过类的继承实现 Mixin。
+
+```js
+class MyClass extends MyBaseClass {
+  /* ... */
+}
+```
+
+上面代码中,MyClass继承了 `MyBaseClass`.如果我们想在`MyClass`里面"混入"一个`foo`方法,一个办法是在`MyClass`和`MyBaseClass`之间插入一个混入类,这个类具有`foo`方法,并且继承了`MyBaseClass`的所有方法,然后`MyClass`再继承这个类
+
+```js
+let MyMixin = (superClass) => class extends superclass{
+   foo() {
+    console.log('foo from MyMixin');
+  }
+}
+```
+
+上面代码中，`MyMixin`是一个混入类生成器，接受`superclass`作为参数，然后返回一个继承`superclass`的子类，该子类包含一个`foo`方法。
+
+接着，目标类再去继承这个混入类，就达到了“混入”`foo`方法的目的。
+
+```js
+class MyClass extends MyMixin(MyBaseClass) {
+  /* ... */
+}
+
+let c = new MyClass();
+c.foo(); // "foo from MyMixin"
+```
+
+如果需要“混入”多个方法，就生成多个混入类。
+
+```js
+class MyClass extends Mixin1(Mixin2(MyBaseClass)) {
+  /* ... */
+}
+```
+
+这种写法的一个好处，是可以调用`super`，因此可以避免在“混入”过程中覆盖父类的同名方法。
+
+```js
+let Mixin1 = (superclass) => class extends superclass {
+  foo() {
+    console.log('foo from Mixin1');
+    if (super.foo) super.foo();
+  }
+};
+
+let Mixin2 = (superclass) => class extends superclass {
+  foo() {
+    console.log('foo from Mixin2');
+    if (super.foo) super.foo();
+  }
+};
+
+class S {
+  foo() {
+    console.log('foo from S');
+  }
+}
+
+class C extends Mixin1(Mixin2(S)) {
+  foo() {
+    console.log('foo from C');
+    super.foo();
+  }
+}
+```
+
+上面代码中，每一次`混入`发生时，都调用了父类的`super.foo`方法，导致父类的同名方法没有被覆盖，行为被保留了下来。
+
+```js
+new C().foo()
+// foo from C
+// foo from Mixin1
+// foo from Mixin2
+// foo from S
+```
+
+
+
+### 20.7 Trait
+
+Trait 也是一种修饰器,效果与Mixin类似,但是提供更多功能,比如防止同名方法冲突,排除混入某些方法,为混入的方法起别名等等.
+
+下面采用[traits-decorator](https://github.com/CocktailJS/traits-decorator)这个第三方模块作为例子。这个模块提供的`traits`修饰器，不仅可以接受对象，还可以接受 ES6 类作为参数。
+
+```js
+import { traits } from 'traits-decorator';
+
+class TFoo {
+  foo() { console.log('foo') }
+}
+
+const TBar = {
+  bar() { console.log('bar') }
+};
+
+@traits(TFoo, TBar)
+class MyClass { }
+
+let obj = new MyClass();
+obj.foo() // foo
+obj.bar() // bar
+```
+
+上面代码中，通过`traits`修饰器，在`MyClass`类上面“混入”了`TFoo`类的`foo`方法和`TBar`对象的`bar`方法。
+
+Trait 不允许“混入”同名方法。
+
+```js
+import { traits } from 'traits-decorator';
+
+class TFoo {
+  foo() { console.log('foo') }
+}
+
+const TBar = {
+  bar() { console.log('bar') },
+  foo() { console.log('foo') }
+};
+
+@traits(TFoo, TBar)
+class MyClass { }
+// 报错
+// throw new Error('Method named: ' + methodName + ' is defined twice.');
+//        ^
+// Error: Method named: foo is defined twice.
+```
+
+上面代码中，`TFoo`和`TBar`都有`foo`方法，结果`traits`修饰器报错。
+
+一种解决方法是排除`TBar`的`foo`方法。
+
+```js
+import { traits, excludes } from 'traits-decorator';
+
+class TFoo {
+  foo() { console.log('foo') }
+}
+
+const TBar = {
+  bar() { console.log('bar') },
+  foo() { console.log('foo') }
+};
+
+@traits(TFoo, TBar::excludes('foo'))
+class MyClass { }
+
+let obj = new MyClass();
+obj.foo() // foo
+obj.bar() // bar
+```
+
+上面代码使用绑定运算符（::）在`TBar`上排除`foo`方法，混入时就不会报错了。
+
+另一种方法是为`TBar`的`foo`方法起一个别名。
+
+```js
+import { traits, alias } from 'traits-decorator';
+
+class TFoo {
+  foo() { console.log('foo') }
+}
+
+const TBar = {
+  bar() { console.log('bar') },
+  foo() { console.log('foo') }
+};
+
+@traits(TFoo, TBar::alias({foo: 'aliasFoo'}))
+class MyClass { }
+
+let obj = new MyClass();
+obj.foo() // foo
+obj.aliasFoo() // foo
+obj.bar() // bar
+```
+
+上面代码为`TBar`的`foo`方法起了别名`aliasFoo`，于是`MyClass`也可以混入`TBar`的`foo`方法了。
+
+`alias`和`excludes`方法，可以结合起来使用。
+
+```js
+@traits(TExample::excludes('foo','bar')::alias({baz:'exampleBaz'}))
+class MyClass {}
+```
+
+上面代码排除`了TExample`的`foo`方法和`bar`方法，为`baz`方法起了别名`exampleBaz`。
+
+`as`方法则为上面的代码提供了另一种写法。
+
+```js
+@traits(TExample::as({excludes:['foo', 'bar'], alias: {baz: 'exampleBaz'}}))
+class MyClass {}
+```
+
+
+
+### 20.8 Babel 转码器的支持
+
+目前，Babel 转码器已经支持 Decorator。
+
+首先，安装`babel-core`和`babel-plugin-transform-decorators`。由于后者包括在`babel-preset-stage-0`之中，所以改为安装`babel-preset-stage-0`亦可。
+
+```shell
+$ npm install babel-core babel-plugin-transform-decorators
+```
+
+然后，设置配置文件`.babelrc`。
+
+```
+{
+  "plugins": ["transform-decorators"]
+}
+```
+
+这时，Babel 就可以对 Decorator 转码了。
+
+脚本中打开的命令如下。
+
+```
+babel.transform("code", {plugins: ["transform-decorators"]})
+```
+
+Babel 的官方网站提供一个[在线转码器](https://babeljs.io/repl/)，只要勾选 Experimental，就能支持 Decorator 的在线转码。
+
