--- a/ES6/22.Module的加载实现.md
+++ b/ES6/22.Module的加载实现.md
@@ -268,11 +268,566 @@ $ babel-node main.js
 
 
 
+### 22.3 Node加载
+
+#### 概述
+
+Node对ES6模块的处理比较麻烦,因为它有自己的CMD模块格式,与ES6模块格式是不兼容的.目前的解决方案是,将两者分开,ES6模块和CMD采用各自的加载方案.
+
+NODE 要求ES6模块采用`.mjs`后缀文件名.也就是说,只要脚本文件里面使用`import`或者`export`命令,那么就必须采用`.mjs`后缀名.`require`命令不能加载`.mjs`文件,会报错,只有`import`命令才可以加载`.mjs`文件,反过来`.mjs`文件里面也不能使用`require`命令,必须使用`import`.
+
+目前,这项功能还在试验阶段.安装Node V8.5.0或以上版本,要用`--experimental-modules`参数才能打开该功能.
+
+```shell
+$ node --experimental-modules my-app.mjs
+```
+
+为了与浏览器的`import`加载规则相同,Node的`.mjs`文件支持URL路径.
+
+```js
+import './foo?qurey=1' //加载./foo 传入参数 ?query=1
+```
+
+上面代码中,脚本路径带有参数`?query=1`,Node会按URL规则解读,同一个脚本只要参数不同,就会被加载多次,并且保存不同的缓存,由于这个原因,只要文件名中有`:`,`%`,`#`,`?` 等特殊字符,最好对这些字符进行转义.
+
+目前,Node的`import`命令只支持加载本地木块(`file:`协议),不支持加载远程模块
+
+如果模块名不含路径,那么`import`命令回去`node_modules`目录寻找这个模块.
+
+```js
+import 'baz';
+import 'abc/123';
+```
+
+如果模块名包含路径,那么`import`命令会按照路径去寻找这个名字的脚本文件.
+
+```js
+import 'file:///etc/config/app.json';
+import './foo';
+import './foo?search';
+import '../bar';
+import '/baz';
+```
+
+如果脚本文件省略了后缀名,比如`import './foo'`,Node会依次尝试四个后缀名:`./foo.mjs`,`./foo.js`,`./foo.json`,`./foo.node`.如果这些脚本文件都不存在,Node就会去加载`./foo/package.json`的`main`字段,那么就会依次加载`./foo/index.mjs`,`./foo/index.js`,`./foo/index.json`,`./foo/index.node`.如果以上4个文件还是不存在,就会抛出错误
+
+node的`import`命令是异步加载,这一点与浏览器的处理方法相同.
 
 
 
+#### 内部变量
+
+ES6模块应该是通用的,同一个模块不用修改,就可以用在浏览器环境和服务器环境,为了达到这个目标,Node规定ES6模块之中不能使用CMD模块的特有的一些内部便令.
+
+首先,就是`this`关键字,ES6模块之中,顶层的`this`指向`undefined`;CMD模块的顶层`this`指向当前模块,这是两者的一个重大差异.
+
+其次,以下这些顶层变量在ES6模块之中都是不存在的.
+
+- `arguments`
+- `require`
+- `module`
+- `exports`
+- `__filename`
+- `__dirname`
+
+如果你一定要使用这些变量,有一个变通方法,就是写一个CMD模块输出这些变量,然后再用ES6模块加载这个CMD模块,但是这样一来,该ES6模块就不能直接用于浏览器环境了,所以不推荐这样做
+
+```js
+// expose.js
+module.exports = {__dirname};
+
+// use.mjs
+import expose from './expose.js'
+const {__dirname} == expose;
+```
+
+上面代码中,`expose.js`是一个cmd模块,输出变量`__dirname`,该变量在ES6模块之中不存在,ES6模块加载`expose.js`,就可以得到`__dirname`.
 
 
 
+#### ES6模块加载CMD模块
+
+CMD模块的输出都被定义在`module.exports`这个属性上面,NODE的`import`命令加载CMD模块,NODE会自动将`module.exports`属性,当作模块的默认输出,即等同于`export default xxx`.
+
+下面是一个CMD模块.
+
+```js
+//a.js
+module.exports = {
+  foo:'hello',
+  bar:'world'
+};
+
+//等同于
+export default  {
+  foo:'hello',
+  bar:'world'
+}
+```
+
+`import`命令加载上面的模块,`module.exports`会被视为默认输出,即`import`命令实际上输入的是这样一个对象`{default:module.exports}`.
+
+所以,一共有三种写法,可以拿到CMD模块的`module.exports`
+
+```js
+//写法一
+import baz from './a';
+// baz = {foo:'hello', bar:'world'};
+
+//写法二
+import {default as baz } from './a';
+// baz = { foo: 'hello', bar:'world' };
+
+// 写法三
+import * as baz from './a';
+// baz = {
+//   get default() {return module.exports;},
+//   get foo() {return this.default.foo}.bind(baz),
+//   get bar() {return this.default.bar}.bind(baz)
+// }
+```
+
+上面代码的第三种写法,可以通过`baz.default`拿到`module.exports`. `foo`属性和`bar`属性就是可以通过这种方法拿到了`module.exports`.
+
+下面是一些例子
+
+```js
+// b.js
+module.exports = null;
+
+//es.js
+import foo from './b';
+// foo = null;
+
+// es.js第二种写法
+import * as bar from './b';
+// bar = { default : null };
+```
+
+上面代码中,`es.js`采用第二种写法时,要通过`bar.default`这样的写法,才能拿到`module.exports`
+
+```js
+// c.js
+module.exports = function two(){
+  return 2;
+}
+
+// es.js
+import foo from './c';
+foo() //2
+
+import * as bar from './c';
+bar.default(); //2
+bar(); //throws , bar is not a function(是个对象bar{default:function(){}} )
+```
+
+上面代码中，`bar`本身是一个对象，不能当作函数调用，只能通过`bar.default`调用。
+
+CMD模块的输出缓存机制,在ES6加载方式下依然有效(CMD的是拷贝,ES6的是引用)
+
+```js
+// foo.js
+module.exports = 123;
+setTimeout(_ => module.exports = null);
+```
+
+上面代码中，对于加载`foo.js`的脚本，`module.exports`将一直是`123`，而不会变成`null`。
+
+由于 ES6 模块是编译时确定输出接口，CommonJS 模块是运行时确定输出接口，所以采用`import`命令加载 CommonJS 模块时，不允许采用下面的写法。
+
+```js
+//不正确
+import { readfile } from 'fs';
+```
+
+上面写法不正确,因为`fs`是CMD格式,只有在运行时才能确定`readfile`接口,而`import`是要求在编译时就确定这个接口.解决方法就是改为整体输入
+
+```js
+//正确写法一
+import * as express from 'express';
+const app = express.default();
+
+//正确写法二
+import express from 'express';
+const app =express();
+```
 
 
+
+#### CMD模块加载ES6模块
+
+CMD模块加载ES6模块,不能使用`require`命令,而是使用`import()`函数.ES6模块的所有输出接口,会变成输入对象的属性.
+
+```js
+// es.mjs
+let foo = {bar:'my-default'};
+export default foo;
+foo = null;
+
+// cjs.js
+const es_namespace = await import('./es');
+// es_namespace = {
+//   get default() {
+//     ...
+//   }
+// }
+console.log(es_namespace.default);
+// { bar:'my-default' }
+```
+
+上面代码中,`default`接口变成了`es_namespace.default`属性.另外,由于存在缓存机制,`es.mjs`对`foo`的重新赋值没有在模块外部反应出来.
+
+下面是另一个例子.
+
+```js
+// es.js
+export let foo = { bar:'my-default' };
+export {foo as bar};
+export function f() {};
+export class c{};
+
+//cjs.js
+const es_namespace = await import('./es');
+// es_namespace = {
+//   get foo() {return foo;}
+//   get bar() {return foo;}
+//   get f() {return f;}
+//   get c() {return c;}
+// }
+```
+
+
+
+### 22.4循环加载
+
+"循环加载"( circular dependency ) 指的是,`a`脚本的执行依赖`b`脚本,而`b`脚本的执行又依赖`a`脚本
+
+```js
+// a.js
+var b = require('b');
+
+// b.js
+var a = require('a');
+```
+
+通常,"循环加载"标识存在强耦合,如果处理不好,还可能导致递归加载,使得程序无法执行,因此应该避免出现.
+
+但实际上,这是很难避免的,尤其是依赖关键复杂的大项目,很容易出现`a`依赖`b`,`b`依赖`c`,`c`又依赖`a`这样的情况,这意味着,模块加载机制必须考虑"循环加载"的情况
+
+对于JS语言来说,目前最常见的两种模式格式CMD和ES6,处理`循环加载`的方法是不一样的,返回的结果也不一样.
+
+
+
+#### CMD模块加载原理
+
+ CMD的一个模块,就是一个脚本文件.`require`命令第一次加载该脚本,就会执行整个脚本,然后在内存生成一个对象.
+
+```js
+{
+  id:'...',
+  exports:{/**/},
+  loaded: true
+}
+```
+
+上面代码就是Node 内部加载模块后生成的一个对象,该对象的`id`属性是模块名,`exports`属性是模块输出的各个接口,`loaded`属性是一个布尔值,表示该模块的脚本是否执行完毕,其他还有很多属性,这里忽略了
+
+以后需要用到这个模块的时候,就会到`exports`属性上面取值,即使再次执行`require`命令,也不会再次执行该模块,而是到缓存之中取值,也就是说,CMD模块无论加载多少次,都只会在第一次加载时运行一次,以后再加载,就返回第一次运行的结果,除非手动清楚系统缓存.
+
+
+
+#### CMD模块的循环加载
+
+CMD模块的重要特性就是加载时执行,即脚本代码在`require`的时候,就会全部执行.一旦出现某个模块被"循环加载",就只输出已经执行的部分,还未执行的部分不会输出.
+
+让我们来看，Node [官方文档](https://nodejs.org/api/modules.html#modules_cycles)里面的例子。脚本文件`a.js`代码如下。
+
+```js
+exports.done = false;
+var b  = require('./b.js');
+console.log('在a.js之中,b.done  = %j',b.done);
+exports.done = true;
+console.log('a.js 执行完毕');
+```
+
+上面代码之中,`a.js`脚本先输出 一个`done`变量,然后加载另一个脚本文件`b.js`.注意,此时`a.js`代码就停在这里,等待`b.js`执行完毕,再往下执行.
+
+再看`b.js`的代码.
+
+```js
+exports.done = flase;
+var a = require('./a.js');
+console.log('在 b.js 之中, a.done = %j',a.done);
+exports.done = true;
+console.log('b.js 执行完毕');
+```
+
+上面代码之中,`b.js`执行到第二行,就会去加载`a.js`,这时,就发生了"循环加载",系统会去`a.js`模块对应对象的`exports`属性取值,可是因为`a.js`还没有执行完,从`exports`属性只能取回已执行的部分,而不是最后的值
+
+`a.js`已经执行的部分 ,只有一行
+
+```js
+exports.done = false;
+```
+
+因此，对于`b.js`来说，它从`a.js`只输入一个变量`done`，值为`false`。
+
+然后,`b.js`接着往下执行,等到全部执行完毕,再把执行权还给`a.js`.于是`a.js`接着往下执行,知道执行完毕.
+
+验证脚本:`main.js`
+
+```js
+var a = require('./a.js');
+var b = require('./b.js');
+console.log('在 main.js 之中, a.done=%j, b.done=%j', a.done, b.done);
+```
+
+执行`main.js`，运行结果如下。
+
+```shell
+$ node main.js
+
+在 b.js 之中，a.done = false
+b.js 执行完毕
+在 a.js 之中，b.done = true
+a.js 执行完毕
+在 main.js 之中, a.done=true, b.done=true
+```
+
+上面的代码证明了两件事.一是,在`b.js`之中,`a.js`没有执行完毕,只执行了第一行,二是,`main.js`执行到第二行时,不会再次执行`b.js`,而是输出缓存的`b.js`的执行结果,即它的第四行
+
+```js
+exports.done = true;
+```
+
+总之,CMD输入的是被输出值的拷贝,不是引用.
+
+另外,由于CMD模块遇到循环加载时,返回的是当前已经执行的部分的值,而不是代码全部执行后的值,两者可能有会有差异.所以输入变量的时候必须非常小心.
+
+```js
+var a = require('a'); //安全的写法
+var foo = requrie('a').foo //危险的写法
+
+exports.good = function (arg) {
+  return a.foo('good', arg); // 使用的是 a.foo 的最新值
+};
+
+exports.bad = function (arg) {
+  return foo('bad', arg); // 使用的是一个部分加载时的值
+};
+```
+
+上面代码中，如果发生循环加载，`require('a').foo`的值很可能后面会被改写，改用`require('a')`会更保险一点。
+
+
+
+#### ES6 模块的循环加载
+
+ES6 处理"循环加载"与CMD有本质的不同,ES 6模块是动态引用,如果使用`import`从一个模块加载变量(即`import foo from 'foo'`),那些变量不会被缓存,而是成为一个指向被加载模块的引用,需要开发者自己保证,真正取值的时候就能够取到值
+
+```js
+// a.mjs
+import {bar} from './b';
+console.log('a.mjs');
+console.log(bar);
+export let foo = 'foo';
+
+// b.mjs
+import {foo} from './a';
+console.log('b.mjs');
+console.log(foo);
+export let bar = 'bar';
+```
+
+上面代码中,`a.mjs`加载`b.mjs`,`b.mjs`又加载`a.mjs`,构成循环加载.执行`a.mjs`,结果如下.
+
+```shell
+$ node --experimental-modules a.mjs
+b.mjs
+ReferenceError: foo is not defined
+```
+
+上面代码中,执行`a.mjs`以后会报错,`foo`变量未定义.
+
+ES循环加载处理:首先,执行`a.mjs`以后,引擎发现了它加载了`b.mjs`,因此会优先执行`b.mjs`,然后再执行`a.mjs`.执行`b.mjs`的时候,已知它从`a.mjs`输入了`foo`接口,这时不会去执行`a.mjs`,而是认为这个接口已经存在了,继续往下执行,执行到第三行`console.log(foo)`的时候,才发现这个接口根本没定义,因此报错.
+
+解决这个问题的方法,就是让`b.mjs`运行时,foo已经有定义了,这可以通过将`foo`写成函数来解决
+
+```js
+// a.mjs
+import {bar} from './b';
+console.log('a.mjs');
+console.log(bar());
+function foo() { return 'foo' }
+export {foo};
+
+// b.mjs
+import {foo} from './a';
+console.log('b.mjs');
+console.log(foo());
+function bar() {return 'bar' }
+export {bar};
+```
+
+这时再执行`a.mjs`就可以得到预期结果。
+
+```shell
+$ node --experimental-modules a.mjs
+b.mjs
+foo
+a.mjs
+bar
+```
+
+这是因为函数具有提升作用，在执行`import {bar} from './b'`时，函数`foo`就已经有定义了，所以`b.mjs`加载的时候不会报错。这也意味着，如果把函数`foo`改写成函数表达式，也会报错。
+
+```js
+// a.mjs
+import {bar} from './b';
+console.log('a.mjs');
+console.log(bar());
+const foo = () => 'foo';
+export {foo};
+```
+
+上面代码的第四行，改成了函数表达式，就不具有提升作用，执行就会报错。
+
+> ps:感觉实际上还是没有解决ES6模块引入的问题,只是利用了JS本身的BUG来解决了报错?
+
+我们再来看 ES6 模块加载器[SystemJS](https://github.com/ModuleLoader/es6-module-loader/blob/master/docs/circular-references-bindings.md)给出的一个例子。
+
+```js
+// even.js
+import { odd } from './odd'
+export var counter = 0;
+export function even(n) {
+  counter++;
+  return n === 0 || odd(n - 1);
+}
+
+// odd.js
+import { even } from './even';
+export function odd(n) {
+  return n !== 0 && even(n - 1);
+}
+```
+
+> 感觉像一个递归..嵌套的函数
+
+上面代码中，`even.js`里面的函数`even`有一个参数`n`，只要不等于 0，就会减去 1，传入加载的`odd()`。`odd.js`也会做类似操作。
+
+运行上面这段代码，结果如下。
+
+```shell
+$ babel-node
+> import * as m from './even.js';
+> m.even(10);
+true
+> m.counter
+6
+> m.even(20)
+true
+> m.counter
+17
+```
+
+上面代码中，参数`n`从 10 变为 0 的过程中，`even()`一共会执行 6 次，所以变量`counter`等于 6。第二次调用`even()`时，参数`n`从 20 变为 0，`even()`一共会执行 11 次，加上前面的 6 次，所以变量`counter`等于 17。
+
+这个例子如果要改为CMD,就无法执行,会报错
+
+```js
+//even.js
+var odd = require('./odd');
+var counter = 0 ;
+exports.counter = counter;
+exports.even = function (n) {
+  counter++;
+  return n == 0 || odd(n-1);
+}
+
+// odd.js
+var even = require('./even').event;
+module.exports = function (n) {
+  return n != 0 && even(n-1);
+}
+```
+
+上面代码中,`even.js`
+
+
+
+### 22.5 ES6模块转码
+
+浏览器目前还不支持ES6模块,为了现在就能使用,可以将转为ES5的写法,除了babel可以用来转码以外,还有以下两个方法,也可以用来转码
+
+
+
+#### ES6 module transpiler
+
+[ES6 module transpiler](https://github.com/esnext/es6-module-transpiler)是 square 公司开源的一个转码器，可以将 ES6 模块转为 CommonJS 模块或 AMD 模块的写法，从而在浏览器中使用。
+
+首先，安装这个转码器。
+
+```shell
+$ npm install -g es6-module-transpiler
+```
+
+然后，使用`compile-modules convert`命令，将 ES6 模块文件转码。
+
+```shell
+$ compile-modules convert file1.js file2.js
+```
+
+`-o`参数可以指定转码后的文件名。
+
+```shell
+$ compile-modules convert -o out.js file1.js
+```
+
+
+
+#### SystemJS
+
+另一种解决方法是使用 [SystemJS](https://github.com/systemjs/systemjs)。它是一个垫片库（polyfill），可以在浏览器内加载 ES6 模块、AMD 模块和 CommonJS 模块，将其转为 ES5 格式。它在后台调用的是 Google 的 Traceur 转码器。
+
+使用时，先在网页内载入`system.js`文件。
+
+```HTML
+<script src="system.js"></script>
+```
+
+然后，使用`System.import`方法加载模块文件。
+
+```HTML
+<script>
+  System.import('./app.js');
+</script>
+```
+
+上面代码中的`./app`，指的是当前目录下的 app.js 文件。它可以是 ES6 模块文件，`System.import`会自动将其转码。
+
+需要注意的是，`System.import`使用异步加载，返回一个 Promise 对象，可以针对这个对象编程。下面是一个模块文件。
+
+```js
+// app/es6-file.js:
+
+export class q {
+  constructor() {
+    this.es6 = 'hello';
+  }
+}
+```
+
+然后，在网页内加载这个模块文件。
+
+```HTML
+<script>
+
+System.import('app/es6-file').then(function(m) {
+  console.log(new m.q().es6); // hello
+});
+
+</script>
+```
+
+上面代码中，`System.import`方法返回的是一个 Promise 对象，所以可以用`then`方法指定回调函数。
